# src/api/routes/userRoutes.js
@@ -7,6 +7,8 @@ router.post(apienpoint, userController.createUser);
 router.post(apienpoint+'/sendmaildemo', userController.sendmaildemo);
 router.post(apienpoint+'/login', userController.login);
 router.post(apienpoint+'/verifyEmail', userController.verifyEmailRegister);
+router.post(apienpoint+'/forgot-password', userController.forgotPassword);
+router.post(apienpoint+'/verify-Forgot-Password', userController.verifyForgotPasswordByEmailCode);
 router.post(apienpoint+'/sendVerifyEmail', userController.sendVerifyEmail);
 // #swagger.security = [{ "apiKeyAuth": [] }]
 router.post(apienpoint+'/change-password', authenticateToken, userController.changePassword);
